[package]
name = "symm_impl"
version = "0.1.2"
description = "Attribute macro that automatically implements a symmetric trait"
repository = "https://github.com/johnmave126/symm_impl"
documentation = "https://docs.rs/symm_impl"
authors = ["Youmu <johnmave126@gmail.com>"]
edition = "2018"
keywords = ["derive", "macro", "trait", "procedural"]
categories = ["no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/lib.rs",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"